syntax = "proto3";

option csharp_namespace = "InteractReef.Grpc.Organizations";

import "google/protobuf/empty.proto";
import "Protos/Base.proto";

service OrganizationGrpcService{
	rpc OrganizationExists(IdRequest) returns (BoolResponse);
	rpc GroupExists(IdListRequest) returns (GrpcResponse);
}